jdk 11, spring boot 2.x, open api 1.x, readme